--- a/03_django/01_form/templates/base.html
+++ b/03_django/01_form/templates/base.html
@@ -14,6 +14,9 @@
             <li>
                 <a href="/user_input">user_input</a>
             </li>
+            <li>
+                <a href="/user_input/ping/">Ping</a>
+            </li>
         </ul>
     </nav>
     {% block content %}
