--- a/03_django/01_form/user_input/templates/user_input/pong.html
+++ b/03_django/01_form/user_input/templates/user_input/pong.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-
+<h1>Data-From-Ping</h1>
+<p>{{username}}</p>
+<p>{{password}}</p>
 {% endblock content %}
